[metadata]
name = exit-stack
description = Decorator to run clean-up on exit from [async] function/generator
long_description = file: README.rst
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/exit-stack
license = MIT

[options]
modules = exit_stack
python_requires = >3.7
install_requires =
setup_requires =
    setuptools_scm>=3.3.3

[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native --cov
filterwarnings = error

[coverage:run]
branch = True
source = exit_stack

[coverage:report]
show_missing = True
